--- a/config/database.yml
+++ b/config/database.yml
@@ -9,17 +9,35 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
-development:
-  <<: *default
-  database: db/development.sqlite3
+# development:
+#   <<: *default
+#   database: db/development.sqlite3
+
+
+
+  development:
+  adapter: postgresql
+  encoding: unicode
+  database: Big_Daddys_BBQ_development
+  pool: 5
+  username: Big_Daddys_BBQ
+  password: Mike2476
+
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: Big_Daddys_BBQ_test
+  pool: 5
+  username: Big_Daddys_BBQ
+  password: Mike2476
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.postgresql
+# test:
+#   <<: *default
+#   database: db/test.sqlite3
 
 production:
   <<: *default
-  database: db/production.postgresql
+  database: BigDaddysBBQ_production
